--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Validation
+name: Build
 
 on:
   push:
@@ -22,6 +22,8 @@ jobs:
         config:
           - debug
           - release
+        device:
+          - iPhone 15 Pro
     steps:
       - uses: actions/checkout@v4
       - name: Select Xcode 15.4
