--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,16 @@
 name: Release
 on:
+  schedule:
+    - cron: "0 0 * * *"
   workflow_dispatch:
     inputs:
       version:
         description: 'Version to release ex.: "1.1.252" (leave blank for latest)'
         required: false
+
 permissions:
   contents: write
+
 jobs:
   release:
     runs-on: macos-latest
