--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,16 +26,25 @@ jobs:
           - macosx
           - iphonesimulator
     steps:
+      - name: Install Dependencies
+        run: |
+          brew install xcbeautify
+
       - uses: actions/checkout@v4
+
       - name: Select Xcode 15.4
         run: sudo xcode-select -s /Applications/Xcode_15.4.app
+
       - name: Build Package ${{ matrix.config }}
         run: swift build -c ${{ matrix.config }}
+
       - name: Build Example Project ${{ matrix.config }}
         run: |
-          xcodebuild \
+          set -o pipefail \
+          && xcodebuild \
             -workspace FluentIcon.xcworkspace \
             -scheme Example \
             -destination "platform=${{ matrix.sdk }}" \
             -configuration ${{ matrix.config }} \
-            build
+            build \
+          | xcbeautify --renderer github-actions
