ci: enable write permission

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -9,6 +9,9 @@ concurrency:
   group: format-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: write
+
 jobs:
   swift_format:
     name: swift-format
