ci: attempt to fix the api rate limit

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,8 +19,8 @@ jobs:
         run: |
           # Check if version input is empty
           if [[ -z "${{ github.event.inputs.version }}" || "${{ github.event.inputs.version }}" == "null" ]]; then
-            # Get the latest version of fluent icon from GitHub API
-            version=$(curl -s https://api.github.com/repos/microsoft/fluentui-system-icons/tags | jq -r 'sort_by(.name) | last(.[]).name')
+            # Get the latest version of fluent icon from GitHub API with github token
+            version=$(curl -s --header "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/microsoft/fluentui-system-icons/tags | jq -r 'sort_by(.name) | last(.[]).name')
           else
             # Use given version for release
             version=${{ github.event.inputs.version }}
