--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,22 +15,37 @@ concurrency:
 
 jobs:
   library-check:
-    name: Library (Swift 5.10)
+    name: Build Library
     runs-on: macos-14
     strategy:
       matrix:
+        destination:
+          - platform=iOS Simulator,name=iPhone 15 Pro
+          - platform=macOS
         config:
           - debug
           - release
     steps:
       - name: Install Dependencies
         run: |
-          brew install xcbeautify
+          brew install mise
+          mise install
+          mise use --global xcbeautify
 
       - uses: actions/checkout@v4
 
       - name: Select Xcode 15.4
         run: sudo xcode-select -s /Applications/Xcode_15.4.app
+
+      - name: Build Package on ${{ matrix.destination }}
+        run: |
+          mise use --global xcbeautify
+          xcodebuild \
+            -workspace ./FluentIcon.xcworkspace \
+            -scheme FluentIcon \
+            -destination ${{ matrix.destination }} \
+            -configuration ${{ matrix.config }} \
+            build | xcbeautify
 
       - name: Build Package ${{ matrix.config }}
         run: swift build -c ${{ matrix.config }}
