ci: update xcbeautify render

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
             -scheme FluentIcon \
             -destination ${{ matrix.destination }} \
             -configuration ${{ matrix.config }} \
-            build | xcbeautify
+            build | xcbeautify --renderer github-actions
 
       - name: Build Package ${{ matrix.config }}
         run: swift build -c ${{ matrix.config }}
