--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,4 +41,4 @@ jobs:
             -workspace ./FluentIcon.xcworkspace \
             -scheme FluentIcon \
             -destination ${{ matrix.destination }} \
-            test | xcbeautify
+            test | xcbeautify --renderer github-actions
