--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
       matrix:
         destination:
           - platform=iOS Simulator,name=iPhone 15 Pro
-          - platform=macOS
+          # - platform=macOS
     steps:
       - name: Install Dependencies
         run: |
