ci: create PR instead of release directly

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,12 +63,12 @@ jobs:
           git config user.email "${{ github.actor }}@users.noreply.github.com"
           # check if local change exist
           if [[ -n $(git status --porcelain) ]]; then
+            branch="release/${{ env.LATEST_FLUENT_ICON }}"
+            git checkout -b $branch
             git add .
             git commit -m "chore(release): ${{ env.LATEST_FLUENT_ICON }}"
-            git push origin 
-            # Tag and release new version
-            git tag ${{ env.LATEST_FLUENT_ICON }}
-            git push origin ${{ env.LATEST_FLUENT_ICON }}
+            git push -u origin $branch
+            gh pr create --fill
           else
             echo "No changes detected, skipping release"
           fi
