--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,7 @@ jobs:
           # Check if version input is empty
           if [[ -z "${{ github.event.inputs.version }}" || "${{ github.event.inputs.version }}" == "null" ]]; then
             # Get the latest version of fluent icon from GitHub API with github token
+            # Add Authorization header with GitHub token, or this call may be rate limited
             version=$(curl -s --header "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/microsoft/fluentui-system-icons/tags | jq -r 'sort_by(.name) | last(.[]).name')
           else
             # Use given version for release
@@ -29,7 +30,7 @@ jobs:
       - name: Get latest package version
         run: |
           # Get the latest version of release from GitHub API
-          version=$(curl -s https://api.github.com/repos/${{ github.repository }}/releases/latest | jq -r '.tag_name')
+          version=$(curl -s --header "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/tags | jq -r 'sort_by(.name) | last(.[]).name')
           echo "LATEST_RELEASE=$version" >> $GITHUB_ENV
       - name: Check for updates
         run: |
