--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,29 +35,36 @@ jobs:
       - name: Check for updates
         run: |
           # Exit if no updates are available
+          UP_TO_DATE='false'
           if [[ "${{ env.LATEST_FLUENT_ICON }}" == "${{ env.LATEST_RELEASE }}" ]]; then
             echo "Latest version of Fluent Icons is already released!"
-            exit 1
+            UP_TO_DATE='true'
           fi
+          echo "UP_TO_DATE=$UP_TO_DATE" >> $GITHUB_ENV
       - name: Checkout fluent icon to tmp folder
+        if: ${{ env.UP_TO_DATE == 'true' && success() }}
         run: |
           mkdir -p /tmp/fluent
           git clone --depth 1 --branch ${{ env.LATEST_FLUENT_ICON }} https://github.com/microsoft/fluentui-system-icons /tmp/fluent
 
       - name: Checkout package repo
+        if: ${{ env.UP_TO_DATE == 'true' && success() }}
         uses: actions/checkout@v4
 
       - name: Install Dev Tools
+        if: ${{ env.UP_TO_DATE == 'true' && success() }}
         run: |
           brew install mise
           mise install
 
       - name: Generate new package content
+        if: ${{ env.UP_TO_DATE == 'true' && success() }}
         run: |
           mise x -- bun run .generator/index.ts --input /tmp/fluent --output .
           mise x -- swiftformat .
 
       - name: Release new version
+        if: ${{ env.UP_TO_DATE == 'true' && success() }}
         run: |
           # Commit updated Package.swift
           git config user.name "${{ github.actor }}"
