--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,6 +65,8 @@ jobs:
 
       - name: Release new version
         if: ${{ env.UP_TO_DATE == 'false' && success() }}
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           # Commit updated Package.swift
           git config user.name "${{ github.actor }}"
