--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Release new version
         if: ${{ env.UP_TO_DATE == 'false' && success() }}
         env:
-          GH_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         run: |
           # Commit updated Package.swift
           git config user.name "${{ github.actor }}"
