--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -24,6 +24,8 @@ jobs:
         run: sudo xcode-select -s /Applications/Xcode_15.4.app
 
       - name: Install All Tools
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           brew install mise
           mise install
